<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperCam</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tp">Take Picture</string>
    <string name="vg">View Wardrobe</string>
    <string name="help">Help &amp; Backup</string>
    <string name="help2">Help</string>
    <string name="ab">About</string>
    <string name="title_activity_camera">Take Picture</string>
    <string name="title_activity_image_mod">Edit Image</string>
    <string name="title_activity_image_tag_editor">Edit Image Tags</string>
    <string name="delimgtitle">Delete image?</string>
    <string name="delimgcontent">The image will be deleted permanently</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_tag1_editor">Edit Description Tag</string>
    <string name="title_activity_tag2_editor">Edit Colour Tag</string>
    <string name="title_activity_tag_set_editor_chooser">TagSetEditorChooserActivity</string>
    <string name="title_activity_delete_tag">Delete Tags</string>
    <string name="addtag">New</string>
    <string name="entertagname">Enter Name of Custom Tag</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="deletetag">Remove</string>
    <string name="title_activity_image_gallery">The Wardrobe</string>
    <string name="cameraopenfail">Failed to open camera. Make sure no other applications are using it and try again.</string>
    <string name="title_activity_new_camera">NewCameraActivity</string>
    <string name="galleryendreached">End of set</string>
    <string name="title_activity_tag_chooser">TagChooserActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_image_viewer">ImageViewerActivity</string>
    <string name="title_activity_backup">BackupActivity</string>
    <string name="title_activity_backup_viewer">BackupViewerActivity</string>
    <string name="hint_enternumber">Enter number</string>
    <string name="hint_entermessage">Enter message</string>
    <string name="title_activity_sharing">SharingActivity</string>
    <string name="sms_send">Send</string>
    <string name="title_activity_my_email">Send Email</string>
    <string name="email_to">To:</string>
    <string name="email_to_hint">Email Address</string>
    <string name="email_subject_hint">Subject</string>
    <string name="email_body_hint">Message</string>
    <string name="email_send_button_text">Send</string>
    <string name="title_activity_drive_service">Authenticate Google Drive</string>
    <string name="title_activity_sms">Share Via Sms</string>
    <string name="title_activity_share_chooser">Share</string>
    <string name="uploading">Uploading</string>
    <string name="upfail">Uploading failed. Try again.</string>
    <string name="tryagain">Try again</string>
    <string name="title_activity_laundry">Laundry</string>
    <string name="remove">Remove</string>
    <string name="sms_title">SMS</string>
    <string name="email_title">Email</string>
    <string name="title_activity_alternate_image_viewer">AlternateImageViewerActivity</string>
    <string name="title_activity_help_gallery">HelpGalleryActivity</string>
	<string name="helpimage">Help Image</string>
	<string name="dontaskagain">Don\'t ask again</string>
	<string name="dontaskagain">Don\'t show again</string>
</resources>
