<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dip"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyEmailActivity" 
    android:background="@drawable/creamban">

    <TextView
        android:id="@+id/email_to_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_to" 
        android:layout_marginBottom="15dip"/>
	<EditText
	    android:id="@+id/email_to_et"
	    android:inputType="textEmailAddress"	    
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:hint="@string/email_to_hint"
	    android:layout_below="@+id/email_to_tv"
	    android:layout_marginBottom="15dip"/>
	<EditText
	    android:id="@+id/email_subject_et"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:hint="@string/email_subject_hint"
	    android:layout_below="@+id/email_to_et"
	    android:layout_marginBottom="15dip"/>
	<EditText
	    android:id="@+id/email_body_et"
	    android:layout_height="match_parent"
	    android:layout_width="match_parent"
	    android:layout_marginBottom="10dip"
	    android:hint="@string/email_body_hint"
	    android:layout_below="@+id/email_subject_et"
	    android:layout_above="@+id/email_send_button"/>
	<Button
	    android:id="@+id/email_send_button"
	    android:text="@string/email_send_button_text"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentBottom="true"
	    android:background="@drawable/creamrectbtnxml"
	    />
</RelativeLayout>
