<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/creamban">
    
	<EditText android:id="@+id/toEt"
		android:inputType="phone"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:hint="@string/hint_enternumber"
		android:layout_marginBottom="15dip"/>
	<EditText android:id="@+id/msgEt"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_below="@+id/toEt"
	    android:layout_above="@+id/sendSmsButton"
	    android:hint="@string/hint_entermessage"/>

	<Button
	    android:id="@+id/sendSmsButton"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:layout_marginTop="10dip"
	    android:background="@drawable/creamrectbtnxml"
	    android:text="@string/sms_send" />
	   
</RelativeLayout>
